# uptimecurl

./: .gitignore  CODE_OF_CONDUCT.md.license  Pipfile  Pipfile.lock.license  README.md  README.md.license  coverage.txt.license  main.py  setup.cfg  setup.py  template.mustache
uptimecurl/: uptimecurl.py
