# SPDX-License-Identifier: GPL-3.0-or-later
# SPDX-FileCopyrightText: Copyright 2020 David Seaward

[metadata]
name = uptimecurl
version = 0.0.2
description = Simple monitoring tool designed for rapid deployment and results.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = GPL-3.0-or-later
author = David Seaward
author_email = david@librem.one
url = https://example.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
packages = find:
include_package_data = True
install_requires =
    chevron >=0.13, <0.14
    click >=7.0, <8.0
    requests >=2.24, <3.0
    ruamel.yaml >=0.16, <0.17

[options.entry_points]
console_scripts =
    uptimecurl = uptimecurl.uptimecurl:cli
